# fun-opencv-experiments

./: .gitattributes  README.md
FlatCoinDetection/: CoinDetection.C
OpenCVLab/FlatCoinDetection/: ObjectDetection.lua
OpenCVLab/PixelIntensity/: PixelIntensity.lua  PixelIntensityBW.C
OpenCVLab/WSImageClient/WebSocketClient/site/: index.html
OpenCVLab/WSImageClient/WebSocketClient/site/css/: oldoak.css
OpenCVLab/WSImageClient/WebSocketClient/site/js/: wsclient.js
OpenCVLab/WSImageServer/: README.md
OpenCVLab/WSImageServer/include/: PageRequestHandler.h  WebSocketServer.h
OpenCVLab/WSImageServer/src/: RequestHandlerFactory.cpp  WebSocketRequestHandler.cpp  WebSocketServer.cpp  WebSocketServerMain.cpp
OpenGLLab/: README.md
OpenGLLab/AreaEnclosure/: .CMakeLists.txt.swp  CMakeLists.txt
OpenGLLab/AreaEnclosure/.metadata/: version.ini
OpenGLLab/AreaEnclosure/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
OpenGLLab/AreaEnclosure/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
OpenGLLab/AreaEnclosure/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
OpenGLLab/AreaEnclosure/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache.lucene60/: segments_1
OpenGLLab/AreaEnclosure/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/: _0.cfe  _0.cfs  _0.si  segments_1
OpenGLLab/AreaEnclosure/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
OpenGLLab/AreaEnclosure/docs/: Bugs_in_Convex_Hull.odt
OpenGLLab/AreaEnclosure/include/: ConvexHull.h  GLShader.h
OpenGLLab/AreaEnclosure/src/: ConvexHull.cpp  GLShader.cpp  TestConvexHull.cpp
OpenGLLab/AreaEnclosure/src/shaders/: fragment.shader  text_fragment.shader  text_vertex.shader  vertex.shader
PixelIntensity/: PixelIntensityColor.C
WSImageClient/WebSocketClient/: README.md
WSImageClient/WebSocketClient/site/: start_http
WSImageServer/include/: RequestHandlerFactory.h  WebSocketRequestHandler.h  WebSocketServerMain.h
WSImageServer/src/: PageRequestHandler.cpp
WSImageServer/test/: TestWebSocketRequest.cpp
